--- a/src/app/core/home/components/generics/banner/banner.component.styl
+++ b/src/app/core/home/components/generics/banner/banner.component.styl
@@ -1,3 +1,4 @@
+
 .container
   max-width 1300px
   margin: auto
@@ -5,6 +6,10 @@
   height 100vh
   justify-content center
   align-items center
+
+.banner
+  background: url('../../../../../../assets/img/iceland.png') center center no-repeat
+  background-size: cover
 
 .banner-left
   color: white
