header and pager ready

--- a/src/app/core/home/components/generics/banner/banner.component.html
+++ b/src/app/core/home/components/generics/banner/banner.component.html
@@ -10,14 +10,51 @@
     </div>
     <div class="banner-right">
       <figure class="banner-img">
-        <img src="../../../../../../assets/img/whiteCerro.png" alt="">
+        <div class="banner-img-description">
+          <div class="banner-img-title">
+              Hvannadalshnúkur
+              Mountain
+          </div>
+          <div class="number">
+            4.4 <span>/5</span>
+          </div>
+        </div>
+        <div class="banner-image">
+          <img src="../../../../../../assets//img/heart.png" alt="" class="heart">
+          <img src="../../../../../../assets/img/whiteCerro.png" alt="">
+        </div>
       </figure>
       <figure class="banner-img">
-        <img src="../../../../../../assets/img/secondIceland.png" alt="">
+        <div class="banner-img-description">
+          <div class="banner-img-title">
+              Hvannadalshnúkur
+              Mountain
+          </div>
+          <div class="number">
+            4.4 <span>/5</span>
+          </div>
+        </div>
+        <div class="banner-image">
+          <img src="../../../../../../assets//img/heart.png" alt="" class="heart">
+          <img src="../../../../../../assets/img/secondIceland.png" alt="">
+        </div>
       </figure>
       <figure class="banner-img">
         <img src="../../../../../../assets/img/thirdIceland.png" alt="">
       </figure>
     </div>
+
+    <div class="pager">
+      <div class="arrow-up">
+        <img src="../../../../../../assets/img/arrow-down.png" alt="">
+      </div>
+      <div class="page-counter">
+        13/62
+      </div>
+      <div class="arrow-down">
+        <img src="../../../../../../assets/img/arrow-down.png" alt="">
+      </div>
+    </div>
+
   </div>
 </div>
