--- a/src/app/core/home/components/generics/banner/banner.component.styl
+++ b/src/app/core/home/components/generics/banner/banner.component.styl
@@ -6,6 +6,7 @@
   height 100vh
   justify-content center
   align-items center
+  position relative
 
 .banner
   background: url('../../../../../../assets/img/iceland.png') center center no-repeat
@@ -32,13 +33,51 @@
   justify-content: center
   align-items: center
   width 45%
-  position relative
   right -9.9%
   margin-top 100px
 
 .banner-img
   margin 0 8px
+  position relative
   img
     max-width 100%
     display: block
     height: auto
+
+.banner-image
+  position relative
+
+.heart
+  position absolute
+  top 10px
+  right 10px
+
+.banner-img-description
+  display: flex
+  justify-content: space-between
+  margin-bottom 20px
+  align-items: flex-end
+
+.banner-img-title
+  width 50%
+  font-size 16px
+
+.number
+  font-size 40px
+  display flex
+  align-items: flex-end
+  span
+    font-size 20px
+
+.pager
+  position absolute
+  bottom 10vh
+  left 50px
+  text-align: center
+  color: white
+
+.page-counter
+  margin: 30px 0
+
+.arrow-down
+  transform: rotate(180deg)
