--- a/src/styles.styl
+++ b/src/styles.styl
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body
   margin 0
+  color: white
+  font-family 'Source Sans Pro'
+
+a
+  text-decoration: none
